--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.3.*",
         "barryvdh/laravel-ide-helper": "v2.2.2",
         "doctrine/dbal": "2.6.x-dev",
-        "intervention/image": "2.3.8"
+        "intervention/image": "2.3.8",
+        "davejamesmiller/laravel-breadcrumbs": "3.0.1",
+        "artesaos/seotools": "0.10.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
